2.3/dep_nginx_multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nginx-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: deployment-configmap-volume
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
          - containerPort: 8080
      volumes:
      - name: deployment-configmap-volume
        configMap:
          name: deployment-configmap
