2.3/svc_nginx_multitool.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  selector:
    app: nginx-multitool
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31080
  type: NodePort
