2.3/svc_tls_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-tls-nginx
spec:
  selector:
    app: nginx-multitool
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
